Bug 90885 - Waltop/Aiptek tablet does not work
Summary: Waltop/Aiptek tablet does not work
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-07 10:56 UTC by Marco Krüger
Modified: 2015-06-29 06:36 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
USB device details (1.97 KB, text/plain)
2015-06-07 10:56 UTC, Marco Krüger
Details
evemu-record output (97.85 KB, text/plain)
2015-06-09 05:59 UTC, Marco Krüger
Details
libinput tablet branch - xorg backtrace (1.87 KB, text/plain)
2015-06-14 17:00 UTC, Marco Krüger
Details

Description Marco Krüger 2015-06-07 10:56:55 UTC
Created attachment 116336 [details]
USB device details

I tried libinput-0.17.0 in combination with xf86-input-libinput 0.11.0 on my arch machine.

The Xorg log prints:
"[   116.505] (EE) libinput: WALTOP Batteryless Tablet : Discarding absolute event from relative device. Please file a bug"

The tablet is an Aiptek "Media Tablet Ultimate II". See the attached lsusb.txt for details.
Comment 1 Peter Hutterer 2015-06-08 22:18:15 UTC
please run evemu-record against the tablet with a pointer motion or two, thanks. easier to use for debugging
Comment 2 Marco Krüger 2015-06-09 05:59:58 UTC
Created attachment 116384 [details]
evemu-record output

Attached the requested evemu-record output.
Comment 3 Peter Hutterer 2015-06-09 06:23:24 UTC
this thing claims it has REL x/y and mouse wheels - does it really? do you happen to have a link to some image of the tablet?
Comment 4 Marco Krüger 2015-06-09 16:36:55 UTC
Yes, it has even two wheels :) Check the manual PDF.
http://download.aiptek.de/Graphic%20Tablet/MediaTablet%20Ultimate%20II/
Comment 5 Peter Hutterer 2015-06-10 00:47:34 UTC
interesting. does it produce relative x/y coordinates? I wonder if switching it to "mouse" mode in windows changes the reporting of the coordinates.

Regardless of that, I don't have an immediate fix here, sorry. The required fix here is to add a hwdb entry for this device to mark it as ID_INPUT_TABLET so we can deal with it appropriately. but libinput upstream doesn't have tablet support yet, so all you'd get here is a different error message, sorry.

you can try the tablet-support branch from the libinput git repo though, would be great to test it on a non-wacom tablet.
Comment 6 Marco Krüger 2015-06-14 16:59:54 UTC
Hey Peter. I tried the tablet branch and failed quickly. It crashes libinput immediately. I attached the xorg backtrack.

(In reply to Peter Hutterer from comment #5)
> interesting. does it produce relative x/y coordinates? I wonder if switching
> it to "mouse" mode in windows changes the reporting of the coordinates.
...

Can you give me an advice, how to check this on windows?
Comment 7 Marco Krüger 2015-06-14 17:00:42 UTC
Created attachment 116493 [details]
libinput tablet branch - xorg backtrace
Comment 8 Peter Hutterer 2015-06-16 04:20:30 UTC
hmm, which commit did you test here? that bug rings a bell but I thought I had fixed it a while ago.

no idea how to check this on windows either, sorry. haven't worked with windows in a long time.
Comment 9 Marco Krüger 2015-06-23 18:52:38 UTC
(In reply to Peter Hutterer from comment #8)
> hmm, which commit did you test here? that bug rings a bell but I thought I
> had fixed it a while ago.

I used the latest version at that moment: 
commit 99aa1f5dc3593826e512460a5c914a87a3a7c16a
Date:   Thu Jun 4 12:49:11 2015 +1000
Merge branch 'master' into tablet-support
Comment 10 Peter Hutterer 2015-06-29 06:36:33 UTC
on the tablet-support branch (not in master yet)

commit 2776581d0807ab9d75ad6969f76a18158564ea16
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Jun 29 14:20:20 2015 +1000

    tablet: fix check for rotation axis


I'm going to close this bug as fixed, because with the right branch it'll work now. It still won't work on master, but that's a known issue and a big-ticket item anyway. no point collecting bugs for that just yet :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.