tablet: fix check for rotation axis

Only the cursor tool has rotation encoded as tilt, so if we don't have the
mouse tool we don't have rotation. We still need to check for ABS_Z separately
though.

Crashes Waltop tablets that have tilt x/y but no cursor/lens tool. We'd thus
never hit the rotation-z condition in tablet_check_notify_axes() and
eventually try to dereference a non-existing ABS_Z axis.

https://bugs.freedesktop.org/show_bug.cgi?id=90885

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>